# appwash-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
locations/: README.md  appwash-location-data.csv  appwash-location-info.py
src/: api.rs  app.rs  config.rs  http.rs  lib.old  lib.rs  main.rs  mod.rs  models.rs  user.rs  views.rs
src/api/: account.rs  machines.rs  miele.rs  mod.rs  models.rs
src/lib/: api.rs  config.rs  format.rs  mod.rs  models.rs  pretty.rs
