[package]
authors = ["Ole Magnus Johnsen <hei@omfj.no>"]
name = "appwash-cli"
description = "A command-line interface for Miele appWash"
homepage = "https://omfj.no/projects/appwash-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
chrono = "0.4.19"
xdg = "*"
colored = "*"
rust-ini = "0.18"
tabled = "0.7.0"

[dependencies.clap]
version = "3.1"
features = ["suggestions", "color", "wrap_help", "cargo", "unstable-grouped"]

