[package]
authors = ["Ole Magnus Johnsen <hei@omfj.no>"]
name = "appwash-cli"
description = "A command-line interface for Miele appWash"
homepage = "https://omfj.no/projects/appwash-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
xdg = "2.4.1"
toml = "0.5.10"
ring = "0.16.20"

[dependencies.clap]
version = "4.0.29"
features = ["suggestions", "color", "wrap_help", "cargo", "unstable-grouped"]

